# space-ranger-cinnamon

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
assets/aseprites/: spaceship-propulsion.aseprite
src/: camera.rs  common.rs  consts.rs  enemy.rs  events.rs  main.rs  movement.rs  player.rs  ui.rs
src/player/: mod.rs  movement.rs  shoot.rs
src/ui/: game_over.rs  gameplay.rs  mainmenu.rs  mod.rs  pause.rs
tools/ci/: Cargo.toml
tools/ci/src/: main.rs
